--- a/index.html
+++ b/index.html
@@ -2,10 +2,13 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="/style.css">
         <title>Document</title>
     </head>
     <body>
-        <p>hello world</p>
+        <h1>hello world</h1>
+        <h3><a href="subpage1/index.html">navigate to sub-page 1</a></h3>
+        <h3><a href="subpage2/index.html">navigate to sub-page 2</a></h3>
+        <h3><a href="subpage3/index.html">navigate to sub-page 3</a></h3>
     </body>
 </html>
