--- a/subpage1/index.html
+++ b/subpage1/index.html
@@ -7,6 +7,33 @@
     </head>
     <body>
         <h1>sub-page 1</h1>
+        <h2>table</h2>
         <h3><a href="/index.html">navigate to home page</a></h3>
+        <table>
+            <thead>
+                <tr>
+                    <th>col1</th>
+                    <th>col2</th>
+                    <th>col3</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>row1 col1</td>
+                    <td>row1 col2</td>
+                    <td>row1 col3</td>
+                </tr>
+                <tr>
+                    <td>row2 col1</td>
+                    <td>row2 col2</td>
+                    <td>row2 col3</td>
+                </tr>
+                <tr>
+                    <td>row3 col1</td>
+                    <td>row3 col2</td>
+                    <td>row3 col3</td>
+                </tr>
+            </tbody>
+        </table>
     </body>
 </html>
